--- a/26 Agosto flows/progetto_crew_flows/pyproject.toml
+++ b/26 Agosto flows/progetto_crew_flows/pyproject.toml
@@ -12,8 +12,16 @@ dependencies = [
     "httpx>=0.25.0",
     "langchain-openai>=0.1.0",
     "langchain-community>=0.2.0",
+    "langchain-core>=0.2.0",
     "python-dotenv>=1.0.0",
     "pydantic>=2.0.0",
+    # Evaluation system dependencies
+    "pandas>=2.0.0",
+    "matplotlib>=3.5.0",
+    "seaborn>=0.11.0",
+    "psutil>=5.9.0",
+    "plotly>=5.0.0",
+    "numpy>=1.24.0",
 ]
 
 [project.scripts]
